--- a/HomeScreen.css
+++ b/HomeScreen.css
@@ -1,29 +1,59 @@
 .container img {
-    margin-bottom: 5px;
+   margin-bottom: 5px;
 }
 
 .modal-header {
-    background-color: green;
+   background-color: green;
 }
 
 .modal-header img {
-    display: block;
-    margin-left: 150px;
+   display: block;
+   margin-left: 150px;
 }
 
 .modal-body td {
-    text-align: center;
+   text-align: center;
+}
+
+.modal-body p {
+   margin: 4%;
+}
+
+.modal-body img {
+   width: 115%;
+   height: 115%;
 }
 
 #container {
-    margin-bottom: 0.5%;
-    margin-top: 0.5%;
+   margin-bottom: 0.5%;
+   margin-top: 0.5%;
 }
 
 #inputs, #buttons {
-    width: 100%;
+   width: 100%;
 }
 
 .btn {
-    width: 100%;
+   width: 100%;
+}
+
+.footer {
+   position: static;
+   left: 0;
+   bottom: 0;
+   width: 100%;
+   text-align: center;
+}
+
+.row{
+}
+
+.col-sm{
+	margin: 1px;
+	text-align: center;
+	border: 2px solid black;
+}
+
+p.col-sm{
+	text-align: center;
 }
