--- a/HomeScreen.css
+++ b/HomeScreen.css
@@ -29,7 +29,7 @@
     margin-top: 0.5%;
 }
 
-#inputs, #buttons {
+#inputs, #buttons, #stepButtons {
     width: 100%;
 }
 
@@ -48,5 +48,22 @@
 }
 
 p.col-sm {
+    text-align: center;
+}
+
+body {
+    position: relative;
+    margin: 0;
+    padding-bottom: 3rem;
+    min-height: 100%;
+    font-family: "Helvetica Neue", Arial, sans-serif;
+}
+
+.footer {
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    padding: 1rem;
     text-align: center;
 }
