--- a/HomeScreen.css
+++ b/HomeScreen.css
@@ -44,11 +44,13 @@
 .col-sm {
     margin: 1px;
     text-align: center;
+	padding: 0;
 	border: 2px solid white;
 }
 
 .with-number{
 	margin: 1px;
+	padding: 0;
     text-align: center;
     border: 2px solid black;
 }
@@ -62,6 +64,8 @@
 }
 
 hr {
+	margin-top: 0;
+    margin-bottom: 0;
     border: 1px solid darkcyan;
 }
 
@@ -99,7 +103,7 @@ body {
     position: fixed;
     z-index: 1;
     left: 50%;
-    bottom: 4rem;
+    bottom: 2rem;
     font-size: 17px;
 }
 
