--- a/HomeScreen.css
+++ b/HomeScreen.css
@@ -24,7 +24,7 @@
     height: 50px;
 }
 
-#container {
+#body_container {
     margin-bottom: 0.5%;
     margin-top: 0.5%;
 }
@@ -32,6 +32,21 @@
 #inputs, #buttons, #stepButtons {
     width: 100%;
 }
+
+/*#table_container{
+	float: left;
+   	width: 50%;
+	padding: 0;
+	margin: 10px;
+}
+
+#code_container{
+	float: right;
+   width: 200px;
+   background: blue;
+		padding: 0;
+
+}*/
 
 .btn {
     width: 100%;
