--- a/stylesheets/HomeScreen.css
+++ b/stylesheets/HomeScreen.css
@@ -33,6 +33,10 @@
     width: 100%;
 }
 
+.container {
+    min-width: 100%;
+}
+
 .container-fluid {
     padding: 15px;
 }
@@ -78,10 +82,11 @@ p.col-sm {
 }
 
 body {
-    position: relative;
+    position: absolute;
     margin: 0;
     padding-bottom: 0.1rem;
     min-height: 100%;
+    min-width: 100%;
     font-family: "Helvetica Neue", Arial, sans-serif;
 }
 
