--- a/stylesheets/HomeScreen.css
+++ b/stylesheets/HomeScreen.css
@@ -2,29 +2,11 @@
     margin-bottom: 5px;
 }
 
-.modal-header {
-    background-color: green;
+.navbar>.container{
+    flex-wrap: nowrap;
 }
 
-.modal-header img {
-    display: block;
-    margin-left: 150px;
-}
-
-.modal-body td {
-    text-align: center;
-}
-
-.modal-body p {
-    margin: 4%;
-}
-
-.modal-body img {
-    width: 50px;
-    height: 50px;
-}
-
-#body_container {
+.body_container {
     margin-bottom: 0.5%;
     margin-top: 0.5%;
 }
@@ -32,6 +14,7 @@
 .AlgorithmControlSection {
     background-color: #ffffff;
     position: fixed;
+    display: grid;
     top: 3.8rem;
     min-width: 100%;
     z-index: 100;
@@ -42,7 +25,9 @@
     margin-bottom: 2rem;
 }
 
-#inputs, #searchButtons, #stepButtons {
+#inputs,
+#searchButtons,
+#stepButtons {
     min-width: 100%;
 }
 
@@ -61,6 +46,8 @@
 
 .form-control {
     border-radius: 0rem;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .row {
@@ -117,70 +104,36 @@ body {
     text-align: center;
 }
 
-/*CSS for snackbar*/
-#snackbar {
-    visibility: hidden;
-    min-width: 250px;
-    margin-left: -125px;
-    background-color: #333;
-    color: #fff;
-    text-align: center;
-    border-radius: 2px;
-    padding: 16px;
-    position: fixed;
-    z-index: 1;
-    left: 50%;
-    bottom: 2rem;
-    font-size: 17px;
-}
-
-#snackbar.show {
-    visibility: visible;
-    -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
-    animation: fadein 0.5s, fadeout 0.5s 2.5s;
-}
-
-@-webkit-keyframes fadein {
-    from {
-        bottom: 0;
-        opacity: 0;
+@media only screen and (max-width:800px) {
+    /* For tablets: */
+    .container a{
+        overflow: hidden;
+        text-overflow: ellipsis;
     }
-    to {
-        bottom: 30px;
-        opacity: 1;
+
+    .btn{
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
+
+    #generateNumbers{
+        min-width: 80%;
     }
 }
 
-@keyframes fadein {
-    from {
-        bottom: 0;
-        opacity: 0;
+@media only screen and (max-width:500px) {
+    /* For mobile phones: */
+    .container a{
+        overflow: hidden;
+        text-overflow: ellipsis;
     }
-    to {
-        bottom: 30px;
-        opacity: 1;
+    
+    .btn{
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
+
+    #generateNumbers{
+        min-width: 80%;
     }
 }
-
-@-webkit-keyframes fadeout {
-    from {
-        bottom: 30px;
-        opacity: 1;
-    }
-    to {
-        bottom: 0;
-        opacity: 0;
-    }
-}
-
-@keyframes fadeout {
-    from {
-        bottom: 30px;
-        opacity: 1;
-    }
-    to {
-        bottom: 0;
-        opacity: 0;
-    }
-}
-
