--- a/stylesheets/HomeScreen.css
+++ b/stylesheets/HomeScreen.css
@@ -67,7 +67,7 @@
     margin: 1px;
     text-align: center;
     padding: 0;
-    border: 2px solid white;
+    border: 2px solid transparent;
 }
 
 .with-number {
