fibonacci steps remaining

--- a/stylesheets/DragableContainer.css
+++ b/stylesheets/DragableContainer.css
@@ -43,9 +43,9 @@
 }
 
 #dragable_container_step_content .row {
-    margin: 0px;
-    padding-left: 50px;
-    padding-right: 50px;
+    margin: 0;
+    padding-left: 30px;
+    padding-right: 30px;
 }
 
 #search_title {
