--- a/stylesheets/Slider.css
+++ b/stylesheets/Slider.css
@@ -62,6 +62,7 @@ input[type="range"]:hover ~ #rangevalue, input[type="range"]:active ~ #rangevalu
     text-align: start;
     font-family: Arial, sans-serif;
     display: block;
+    z-index: 10;
     margin: 5px 0;
     position: relative;
     /*left: 50%;*/
