--- a/stylesheets/DragableContainer.css
+++ b/stylesheets/DragableContainer.css
@@ -48,6 +48,12 @@
     padding-right: 30px;
 }
 
+#dragable_container_step_content h6 {
+    text-align: right;
+    padding: 30px 30px 0;
+    margin: 0;
+}
+
 #search_title {
     text-align: center;
 }
