some minor changes, materilize started to implement

--- a/stylesheets/HomeScreen.css
+++ b/stylesheets/HomeScreen.css
@@ -24,6 +24,10 @@
     margin-bottom: 1rem;
 }
 
+.input-group{
+    flex-wrap: nowrap;
+}
+
 #inputs,
 #searchButtons,
 #stepButtons {
@@ -57,6 +61,8 @@
     border-radius: 0rem;
     overflow: hidden;
     text-overflow: ellipsis;
+    /* margin: 0px;
+    padding: 0px; */
 }
 
 .row {
