--- a/stylesheets/Modal.css
+++ b/stylesheets/Modal.css
@@ -1,11 +1,18 @@
 .modal-header {
     background-color: green;
     padding: 20px;
+    display: initial;
+}
+
+.modal-content{	
+    background-color: green;	
 }
 
 .modal-header img {
     box-align: center;
+    align-self: center;
     vertical-align: center;
+    border: 0rem;	
 }
 
 .modal-header p{
