--- a/stylesheets/HomeScreen.css
+++ b/stylesheets/HomeScreen.css
@@ -20,7 +20,7 @@
 }
 
 #table_container {
-    margin-top: 7rem;
+    margin-top: 11rem;
     margin-bottom: 1rem;
 }
 
@@ -98,10 +98,12 @@ p.col-sm {
 body {
     position: absolute;
     margin: 0;
+    padding: 0px;
     padding-bottom: 0.1rem;
     min-height: 100%;
     min-width: 100%;
     font-family: "Helvetica Neue", Arial, sans-serif;
+    background-color: transparent;
 }
 
 .footer {
