--- a/stylesheets/Modal.css
+++ b/stylesheets/Modal.css
@@ -2,10 +2,18 @@
     background-color: green;
     padding: 20px;
     display: initial;
+    box-shadow: inset rgba(0, 0, 0, .075) 0 -3px 10px,
+    inset rgba(255, 255, 255, .15) 0 1px 0,
+    rgba(0, 0, 0, .3) 0 1px .5px,
+    rgba(0, 0, 0, .15) 0 3px 5px;
 }
 
 .modal-content{	
-    background-color: green;	
+    background-color: green;
+    box-shadow: inset rgba(0, 0, 0, .075) 0 -3px 10px,
+    inset rgba(255, 255, 255, .15) 0 1px 0,
+    rgba(0, 0, 0, .3) 0 1px .5px,
+    rgba(0, 0, 0, .15) 0 3px 5px;	
 }
 
 .modal-header img {
