--- a/stylesheets/HomeScreen.css
+++ b/stylesheets/HomeScreen.css
@@ -75,6 +75,11 @@
     padding: 0;
     text-align: center;
     border: 2px solid black;
+    border-radius: 5px;
+    box-shadow: inset rgba(0, 0, 0, .075) 0 -3px 10px,
+    inset rgba(255, 255, 255, .15) 0 1px 0,
+    rgba(0, 0, 0, .3) 0 1px .5px,
+    rgba(0, 0, 0, .15) 0 3px 5px;
 }
 
 .index {
